tests/type_check/build/env_build_duplicate_function.err.expected
error: at 3:12: [TC-DuplicateDeclaration] Duplicate declaration of function 'f'
   |
 3 |         fn f() { entry: return }
   |            ^
