tests/type_check/build/env_build_duplicate_function.sim

        fn f() { entry: return }
        fn f() { entry: return }
        